--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "react-scripts test",
-    "start": "npm run dev",
+    "start": "npm run udev",
     "pref1": "npm config set registry https://registry.npmjs.org/",
     "f1": "npm run f2",
     "pref2": "npm config set @failean:registry https://failean-988253048728.d.codeartifact.us-east-1.amazonaws.com/npm/failean/",
@@ -50,7 +50,7 @@
     "localprod": "npm run connect",
     "d:b": "aws codeartifact login --tool npm --repository failean --domain failean --domain-owner 988253048728 --region us-east-1 && echo '@failean:registry=https://failean-988253048728.d.codeartifact.us-east-1.amazonaws.com/npm/failean/' >> ~/.npmrc && cp ~/.npmrc . && VERSION=$(node -p \"require('./package.json').version\") && docker build --platform amd64 -t 988253048728.dkr.ecr.us-east-1.amazonaws.com/client:$VERSION .",
     "dev": "PORT=5999 react-scripts start",
-    "preudev": "npm run update",
+    "preudev": "aws codeartifact login --tool npm --repository failean --domain failean --domain-owner 988253048728 --region us-east-1 && npm run update",
     "udev": "npm run dev",
     "predevwindows": "npm i",
     "devwindows": "export PORT=5999 &react-scripts start",
