--- a/package.json
+++ b/package.json
@@ -37,10 +37,7 @@
     "f2": "npm run update",
     "preprod": "npm run f1",
     "prod": "npm run build",
-    "preconect": "aws codeartifact login --tool npm --repository failean --domain failean --domain-owner 988253048728 --region us-east-1 && echo '@failean:registry=https://failean-988253048728.d.codeartifact.us-east-1.amazonaws.com/npm/failean/' >> ./.npmrc",
-    "connect": "npm run prod",
-    "prelocalprod": "rm -f .npmrc",
-    "localprod": "npm run connect",
+    "connect": "aws codeartifact login --tool npm --repository failean --domain failean --domain-owner 988253048728 --region us-east-1",
     "d:b": "VERSION=$(node -p \"require('./package.json').version\") && docker build --platform amd64 -t 988253048728.dkr.ecr.us-east-1.amazonaws.com/adminclient:$VERSION .",
     "dev": "PORT=5990 react-scripts start",
     "preudev": "npm run update",
