--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "f2": "npm run update",
     "preprod": "npm run f1",
     "prod": "npm run build",
-    "connect": "aws codeartifact login --tool npm --repository failean --domain failean --domain-owner 988253048728 --region us-east-1",
+    "preconnect": "aws codeartifact login --tool npm --repository failean --domain failean --domain-owner 988253048728 --region us-east-1",
+    "connect": "npm run setgit1",
+    "presetgit": "npm config set registry https://registry.npmjs.org/",
+    "setgit": "npm config set @failean:registry https://failean-988253048728.d.codeartifact.us-east-1.amazonaws.com/npm/failean/",
     "d:b": "VERSION=$(node -p \"require('./package.json').version\") && docker build --platform amd64 -t 988253048728.dkr.ecr.us-east-1.amazonaws.com/adminclient:$VERSION .",
     "dev": "PORT=5990 react-scripts start",
     "preudev": "npm run update",
