--- a/package.json
+++ b/package.json
@@ -2,52 +2,26 @@
   "name": "failean-adminclient",
   "version": "5.1.0",
   "private": true,
-  "devDependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "axios": "^1.4.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^3.4.0"
-  },
   "scripts": {
-    "version:patch": "npm version patch --no-git-tag-version",
-    "version:minor": "npm version minor --no-git-tag-version",
-    "version:major": "npm version major --no-git-tag-version",
-    "preclean": "npm run connect",
-    "clean": "rm -rf node_modules build package-lock.json",
-    "clean:p": "rm -rf node_modules package-lock.json",
-    "preupdatesimple": "npx npm-check-updates -u",
-    "updatesimple": "npm i",
-    "preupdate": "npm run clean",
-    "update": "npm run updatesimple",
-    "prebuild": "npm run version:patch",
+    "v..": "npm version patch --no-git-tag-version",
+    "v.": "npm version minor --no-git-tag-version",
+    "v": "npm version major --no-git-tag-version",
+    "clean:all": "rm -rf node_modules build package-lock.json",
+    "clean:prod": "rm -rf node_modules package-lock.json",
+    "update": "npm run npmconf && npx npm-check-updates -u && npm i",
+    "update:prod": "npx npm-check-updates -u && npm i",
     "build": "react-scripts build",
+    "start": "npm run dev:fullclean",
+    "npmconf": "rm -f .npmrc && aws codeartifact login --tool npm --repository failean --domain failean --domain-owner 988253048728 --region us-east-1 && npm config set registry https://registry.npmjs.org/ && npm config set @failean:registry https://failean-988253048728.d.codeartifact.us-east-1.amazonaws.com/npm/failean/",
+    "prod": "npm run update:prod && npm run build",
+    "docker": "VERSION=$(node -p \"require('./package.json').version\") && CODEARTIFACT_TOKEN=$(aws codeartifact get-authorization-token --domain failean --domain-owner 988253048728 --query authorizationToken --output text) && docker build --build-arg CODEARTIFACT_TOKEN=$CODEARTIFACT_TOKEN -t 988253048728.dkr.ecr.us-east-1.amazonaws.com/adminclient:$VERSION .",
+    "dev:fullclean": "npm run clean:all && npm run dev:fullfast",
+    "dev:fullfast": "npm run update && npm run dev:fast",
+    "dev:fast": "PORT=5990 react-scripts start",
+    "dev": "npm run dev:fast",
+    "udev": "npm run dev:fullfast",
     "eject": "react-scripts eject",
-    "test": "react-scripts test",
-    "start": "npm run udev",
-    "pref1": "npm config set registry https://registry.npmjs.org/",
-    "f1": "npm run f2",
-    "pref2": "npm config set @failean:registry https://failean-988253048728.d.codeartifact.us-east-1.amazonaws.com/npm/failean/",
-    "f2": "npm run update",
-    "preprod": "npm run f1",
-    "prod": "npm run build",
-    "preconnect": "aws codeartifact login --tool npm --repository failean --domain failean --domain-owner 988253048728 --region us-east-1",
-    "connect": "npm run setgit",
-    "presetgit": "npm config set registry https://registry.npmjs.org/",
-    "setgit": "npm config set @failean:registry https://failean-988253048728.d.codeartifact.us-east-1.amazonaws.com/npm/failean/",
-    "d:b": "VERSION=$(node -p \"require('./package.json').version\") && docker build --platform amd64 -t 988253048728.dkr.ecr.us-east-1.amazonaws.com/adminclient:$VERSION .",
-    "dev": "PORT=5990 react-scripts start",
-    "preudev": "npm run update",
-    "udev": "npm run dev",
-    "predevwindows": "npm i",
-    "devwindows": "export PORT=5990 &react-scripts start",
-    "pred:b": "rm -f .npmrc"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -69,5 +43,18 @@
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.4.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.4.0"
   }
 }
